# test-grpc

./: .gitignore  CMakeLists.txt  compile.bat  conanfile.py
protos/: compile_protos.bat  helloworld.proto
src/: client.cpp  compile_protos.bat  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  main.cpp  server.cpp  test-grpc.cpp  test-grpc.h
test_package/: conanfile.py
